# SugarSnapsCap

./: .gitignore  README.md  initial_location_data.json  initial_sugar_snaps_data.json  manage.py  pyproject.toml
SugarProject/: .env  asgi.py  settings.py  urls.py  wsgi.py
authentication/: forms.py  urls.py  views.py
forumapp/: admin.py  forms.py  models.py  urls.py  views.py
forumapp/migrations/: 0001_initial.py  0002_comment.py
locations/: admin.py  models.py
locations/migrations/: 0001_initial.py  0002_auto_20200713_2345.py  0003_auto_20200713_2345.py
sendemail/: forms.py  urls.py  views.py
sugar_app/: admin.py  apps.py  donation_form.py  models.py  urls.py  views.py
sugar_app/migrations/: 0001_initial.py  0002_auto_20200708_1310.py  0002_auto_20200708_2012.py  0002_auto_20200716_0025.py  0002_boxitem_reserve.py  0003_auto_20200708_1552.py  0003_auto_20200716_0046.py  0004_auto_20200716_0047.py  0005_merge_20200716_0325.py  0005_merge_20200716_1146.py
templates/: 404.html  500.html  base.html  boxform.html  boxitemdetail.html  editUser.html  email.html  index.html  login.html  logout.html  signup.html  user_profile.html
templates/forumapp/: add_post.html  forumpost.html  post.html
templates/sugar_app/: boxitem_confirm_delete.html  boxitem_detail.html  boxitem_form.html
templates/users/: delete_account.html  login.html  logout.html  register.html
users/: admin.py  forms.py  models.py  signal.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200707_0320.py  0002_auto_20200709_1350.py  0002_auto_20200713_2342.py  (+3 more)
(+1 files in other folders)
