[tool.poetry]
name = "sugarsnapscapstone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
pillow = "^7.2.0"
django-crispy-forms = "^1.9.1"
django-bootstrap-datepicker-plus = "^3.0.5"
django-bootstrap4 = "^2.2.0"
django-star-ratings = "^0.9.1"
django-notifications-hq = "^1.6.0"
django-environ = "^0.4.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
